# danim-explore

./: .gitignore  Makefile  README.md  backfill_user_taste.py  bake_codebook.py  bake_codebook2.py  compare_centering.py  docker-compose.yml  eval_codebook.py  load_codewords.py  post_codewords.py  purity_check.py  pyproject.toml  tune_k.py
apps/comments/: models.py
apps/comments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/core/: models.py
apps/core/utils/: ulid.py
apps/explore/: apps.py  urls.py  views.py
apps/explore/services/: feed.py  feed_prod.py  order.py  order_prod.py  search.py  taste.py  taste_prod.py
apps/interactions/: models.py
apps/interactions/migrations/: 0001_initial.py  0002_initial.py  0003_postbookmark.py
apps/posts/: apps.py  models.py
apps/posts/management/: persona.py
apps/posts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_post_embedding_postembedding.py  0004_post_random_score.py  0005_alter_postembedding_embedding_and_more.py  0006_postembedding_codebook_version_and_more.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py  0002_usertaste.py  0003_usertaste_alpha.py  0004_alter_usertaste_vector.py  0005_remove_usertaste_vector.py  0006_usertaste_codebook_version_usertaste_codeword_counts.py
config/: settings.py  urls.py
discards/: a.py  feed.py  order.py
scripts/: check_search_score.py  count_demo_user.py  count_interactions.py  insert_interactions.py  make_demo_user.py  reset_cache.py  reset_demo_user.py  reset_interactions.py  score_debug.py
templates/: list.html
(+9 files in other folders)
